--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD 131 | Derek Temblor</title>
     <link rel="stylesheet" href="styles/layout.css">
 </head>
 
@@ -17,7 +17,10 @@
         </nav>
     </header>
     <div class="left-sidebar blue padding20px">left sidebar</div>
-    <main class="red padding20px">main</main>
+    <main class="red padding20px">
+        <h1>This is head 1</h1>
+        <img src="https://cdn.pixabay.com/photo/2020/04/22/12/06/adventure-5077760_1280.jpg" alt="mountain">
+    </main>
     <div class="right-sidebar orange padding20px">right sidebar</div>
     <footer class="green padding20px">footer</footer>
 </body>
