--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -16,12 +16,18 @@
             <a href="#">about</a>
         </nav>
     </header>
-    <div class="left-sidebar blue padding20px">left sidebar</div>
+    <div class="left-sidebar blue padding20px">
+        <p>left side paragraph: Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, animi. Commodi accusamus consequatur ad, doloremque, ipsum quidem dignissimos odit enim velit eum illo possimus facilis. Unde suscipit architecto doloremque minus.</p>
+    </div>
     <main class="red padding20px">
         <h1>This is head 1</h1>
         <img src="https://cdn.pixabay.com/photo/2020/04/22/12/06/adventure-5077760_1280.jpg" alt="mountain">
     </main>
-    <div class="right-sidebar orange padding20px">right sidebar</div>
+    <div class="right-sidebar orange padding20px">
+        <p>right side paragraph:
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ratione tempore impedit voluptates iste quod maiores libero, laudantium enim reprehenderit necessitatibus eius, tenetur ut illo cum at velit deleniti dolorem.
+        </p>
+    </div>
     <footer class="green padding20px">footer</footer>
 </body>
 
