--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="#">LinkdIn</a></li>
                 <li><a href="https://byui.instructure.com/">I-Learn</a></li>
-                </li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/alma/12?lang=eng&id=p9#p9">Scriptures</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/alma/12?lang=eng&id=p9#p9">Scriptures</a></li>
                 <li><a href="#">Final Project</a></li>
             </ul>
             
