--- a/index.html
+++ b/index.html
@@ -29,23 +29,27 @@
     <main>
         <div class="card-container">
             <section class="card">
-                <h2>H2 sample heading</h2>
-                <img src="https://images.unsplash.com/photo-1579353977828-2a4eab540b9a?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="snowy sample img">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis autem expedita perspiciatis, architecto quaerat quae? Consequuntur doloremque maiores similique. Eius amet sunt quis iure totam dolore explicabo? Molestiae, ab quos.</p>
+                <h2>H2 About Me</h2>
+                <img src="images/sample_front_photo.jpg" alt="profile image">
+                <p>My name is Derek Temblor. I live in the Philippines, the pearl of orient. I currently enjoy reading, recreational gaming, and programming. I look forward to learning and improving my skills alongside everyone. I am a solo in-training web developer.</p>
                 <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/Snowy_Mountains">Snowy Mountains</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Snowy_Mountains">Snowy Mountains</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Snowy_Mountains">Snowy Mountains</a></li>
+                    <h3>Contact me</h3>
+                    <li>Phone number: <a href="tel:555-123-4567">555-123-4567</a></li>
+                    <li>Email: <a href="mailto:recipient@example.com">recipient@example.com</a></li>
+                    <li>Social media: <a href="https://facebook.com">facebook.com</a></li>
                 </ul>
             </section>
             <section class="card">
-                <h2>H2 sample heading</h2>
-                <img src="https://images.unsplash.com/photo-1579353977828-2a4eab540b9a?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="snowy sample img">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus perspiciatis totam est natus saepe magni, ducimus error illo explicabo eos suscipit voluptates necessitatibus unde aperiam accusamus nesciunt eveniet voluptas officia?</p>
+                <h2>Historical Places in the Philippines</h2>
+                <img id="card-img2" src="https://media.istockphoto.com/id/614988160/photo/dumaguete-city-bell-tower-philippines.jpg?s=1024x1024&w=is&k=20&c=JNITFFAjeqLecZVb2IVj6c9YHqWXuRubNieHXRqRr-E=" alt="Dumaguete Cathedral Belfry Tower">
+                <p>Every city has a complex history that is the foundation of its present society. In Dumaguete, the best place to explore that history is the Dumaguete Belfry. In its heyday, this beautiful stone tower helped save Dumaguete during pirate attacks and also called citizens to mass.
+
+                    Today, the Dumaguete Belfry is one of the city’s best known landmarks and is thought to be one of the oldest surviving structures in the city. It can be taken as granted that the clock  tower is with the boulevard the no.1 tourist attraction in Dumaguete.</p>
                 <ul>
-                    <li><a href="https://en.wikipedia.org/wiki/Snowy_Mountains">Snowy Mountains</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Snowy_Mountains">Snowy Mountains</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Snowy_Mountains">Snowy Mountains</a></li>
+                    <h3>References/Other areas of interests:</h3>
+                    <li><a href="https://dumaguete.com/dumaguete-belfry/">Dumaguete Belfry</a></li>
+                    <li><a href="https://www.journeyera.com/casaroro-falls-valencia/">Casaroro Falls</a></li>
+                    <li><a href="https://7641islands.ph/explore/visiting-balinsasayao-twin-lakes-natural-park/">Twin Lakes: Balinsasayao and Danao</a></li>
                 </ul>
             </section>
         </div>
