--- a/index.html
+++ b/index.html
@@ -27,32 +27,50 @@
         </nav>
     </header>
     <main>
-        <div class="card-container">
-            <section class="card">
+        <section class="card area1">
+            <article>
                 <h2>H2 About Me</h2>
                 <img src="images/sample_front_photo.jpg" alt="profile image">
                 <p>My name is Derek Temblor. I live in the Philippines, the pearl of orient. I currently enjoy reading, recreational gaming, and programming. I look forward to learning and improving my skills alongside everyone. I am a solo in-training web developer.</p>
+                <!-- <ul>
+                    <h3>Contact me</h3>
+                    <li>Phone number: <a href="tel:555-123-4567">555-123-4567</a></li>
+                    <li>Email: <a href="mailto:recipient@example.com">recipient@example.com</a></li>
+                    <li>Social media: <a href="https://facebook.com">facebook.com</a></li>
+                </ul> -->
+            </article>
+            <article>
+                <h3>Historical Places in the Philippines</h3>
+                <img id="card-img2" src="https://media.istockphoto.com/id/614988160/photo/dumaguete-city-bell-tower-philippines.jpg?s=1024x1024&w=is&k=20&c=JNITFFAjeqLecZVb2IVj6c9YHqWXuRubNieHXRqRr-E=" alt="Dumaguete Cathedral Belfry Tower">
+                <p>Every city has a complex history that is the foundation of its present society. In Dumaguete, the best place to explore that history is the Dumaguete Belfry. In its heyday, this beautiful stone tower helped save Dumaguete during pirate attacks and also called citizens to mass.
+
+                    Today, the Dumaguete Belfry is one of the city’s best known landmarks and is thought to be one of the oldest surviving structures in the city. It can be taken as granted that the clock  tower is with the boulevard the no.1 tourist attraction in Dumaguete.</p>
+                <!-- <ul>
+                    <h3>References/Other areas of interests:</h3>
+                    <li><a href="https://dumaguete.com/dumaguete-belfry/">Dumaguete Belfry</a></li>
+                    <li><a href="https://www.journeyera.com/casaroro-falls-valencia/">Casaroro Falls</a></li>
+                    <li><a href="https://7641islands.ph/explore/visiting-balinsasayao-twin-lakes-natural-park/">Twin Lakes: Balinsasayao and Danao</a></li>
+                </ul> -->
+            </article>
+        </section>
+        <section class="card area2">
+            <article>
+                <h2>Links to relevant information</h2>
                 <ul>
                     <h3>Contact me</h3>
                     <li>Phone number: <a href="tel:555-123-4567">555-123-4567</a></li>
                     <li>Email: <a href="mailto:recipient@example.com">recipient@example.com</a></li>
                     <li>Social media: <a href="https://facebook.com">facebook.com</a></li>
                 </ul>
-            </section>
-            <section class="card">
-                <h2>Historical Places in the Philippines</h2>
-                <img id="card-img2" src="https://media.istockphoto.com/id/614988160/photo/dumaguete-city-bell-tower-philippines.jpg?s=1024x1024&w=is&k=20&c=JNITFFAjeqLecZVb2IVj6c9YHqWXuRubNieHXRqRr-E=" alt="Dumaguete Cathedral Belfry Tower">
-                <p>Every city has a complex history that is the foundation of its present society. In Dumaguete, the best place to explore that history is the Dumaguete Belfry. In its heyday, this beautiful stone tower helped save Dumaguete during pirate attacks and also called citizens to mass.
-
-                    Today, the Dumaguete Belfry is one of the city’s best known landmarks and is thought to be one of the oldest surviving structures in the city. It can be taken as granted that the clock  tower is with the boulevard the no.1 tourist attraction in Dumaguete.</p>
                 <ul>
                     <h3>References/Other areas of interests:</h3>
                     <li><a href="https://dumaguete.com/dumaguete-belfry/">Dumaguete Belfry</a></li>
                     <li><a href="https://www.journeyera.com/casaroro-falls-valencia/">Casaroro Falls</a></li>
                     <li><a href="https://7641islands.ph/explore/visiting-balinsasayao-twin-lakes-natural-park/">Twin Lakes: Balinsasayao and Danao</a></li>
-                </ul>
-            </section>
-        </div>
+                </ul>          
+            </article>
+
+        </section>
         <span class="invisible" id="full"></span>
         <span class="invisible" id="world-full"></span>
         <span class="invisible" id="short"></span>
