--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -30,7 +30,7 @@
         </section>
     </main>
     <footer>
-        <p>Derek Temblor</p>
+        Derek Temblor
     </footer>
 </body>
 </html>
